test/haskell2010/conformance/negative/prelude-qualified-unqualified-use.hs
module Main where

import qualified Prelude

main =
  map
